--- a/content/release-notes/release-notes
+++ b/content/release-notes/release-notes
@@ -6,5 +6,5 @@ uid: ReleaseNotes
 
 For details about this release, see the following release notes:
 
-+ [AVEVA Adapter for OPCUA](xref:ReleaseNotesOPCUA)
-+ [AVEVA Adpater for OPCUA Module](xref:ReleaseNotesOPCUAModule)
++ [Edge Data Store (EDS)](xref:ReleaseNotesEDS)
++ [Edge Data Store (EDS) Module](xref:ReleaseNotesEDSModule)
